cmake_minimum_required(VERSION 3.18)
project(RayTracingInOneWeekend)
find_package(glad CONFIG REQUIRED)
find_package(glfw3 CONFIG REQUIRED)
find_package(OpenMP REQUIRED)
file(GLOB SRC_FILES *.cpp)
add_executable(main ${SRC_FILES})

if (MSVC)
  target_compile_options(main PRIVATE /arch:AVX2)
endif()
target_link_libraries(main PRIVATE glad::glad glfw OpenMP::OpenMP_CXX)